--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="green">#FF199E5D</color>
+    <color name="green">#FF0F9CDC</color>
     <color name="white">#FFFFFF</color>
     <color name="lgreen">#FF76FF03</color>
+    <color name="blue">#FF7BD0F6</color>
 </resources>
