--- a/app/src/main/res/layout/activity_type_selection.xml
+++ b/app/src/main/res/layout/activity_type_selection.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".type_selection"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="606dp"
+        android:layout_height="536dp"
         android:background="@drawable/curve"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,10 +97,11 @@
         </LinearLayout>
 
         <ImageView
+
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="28dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -115,6 +117,7 @@
         android:layout_marginLeft="2dp"
         android:layout_marginEnd="64dp"
         android:layout_marginRight="64dp"
+        android:textColor="@color/green"
         android:fontFamily="sans-serif-light"
         android:text="Select Your Type"
         android:textSize="30dp"
